Check all swagger endpoints
