# docs/swagger.json
@@ -37,7 +37,7 @@
         },
         "/login": {
             "post": {
-                "description": "аутентификация пользозователя и создание сессии",
+                "description": "аутентификация пользователя и создание сессии",
                 "consumes": [
                     "application/x-www-form-urlencoded"
                 ],
@@ -114,12 +114,12 @@
         },
         "/tasks": {
             "get": {
-                "description": "возвращает список задач в зависимости от роли:\nдля админов - все задачи, для пользователей - задачи пользователя",
+                "description": "возвращает список задач в зависимости от роли:\nдля администраторов - все задачи, для пользователей - задачи пользователя",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "tasks"
+                    "pages"
                 ],
                 "summary": "Get All Tasks",
                 "responses": {
@@ -136,134 +136,6 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/dto.ResponseMap"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ResponseMap"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ResponseMap"
-                        }
-                    }
-                }
-            }
-        },
-        "/tasks/by-priority/{priority}": {
-            "get": {
-                "description": "Возвращает список задач с указанным приоритетом. Только для админов",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "tasks-admins"
-                ],
-                "summary": "Get Tasks by priority",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Приоритет задачи",
-                        "name": "priority",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/repository.Task"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ResponseMap"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ResponseMap"
-                        }
-                    }
-                }
-            }
-        },
-        "/tasks/by-status/{status}": {
-            "get": {
-                "description": "Возвращает список задач с указанным статусом. Статус должен быть одним из: OPEN, IN_PROGRESS или DONE.\nТолько для админов",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "tasks-admins"
-                ],
-                "summary": "Get Tasks by status",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Статус задачи",
-                        "name": "status",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/repository.Task"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ResponseMap"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ResponseMap"
-                        }
-                    }
-                }
-            }
-        },
-        "/tasks/create": {
-            "get": {
-                "description": "Отображает страницу создания шаблона задачи для пользователя в зависимости от его роли.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "text/html"
-                ],
-                "tags": [
-                    "pages"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.UsersTemplateData"
                         }
                     },
                     "401": {
@@ -344,6 +216,134 @@
                 }
             }
         },
+        "/tasks/by-priority/{priority}": {
+            "get": {
+                "description": "Возвращает список задач с указанным приоритетом. Только для администраторов",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tasks-admins"
+                ],
+                "summary": "Get Tasks by priority",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Приоритет задачи",
+                        "name": "priority",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/repository.Task"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResponseMap"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResponseMap"
+                        }
+                    }
+                }
+            }
+        },
+        "/tasks/by-status/{status}": {
+            "get": {
+                "description": "Возвращает список задач с указанным статусом. Статус должен быть одним из: OPEN, IN_PROGRESS или DONE.\nТолько для администраторов",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tasks-admins"
+                ],
+                "summary": "Get Tasks by status",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Статус задачи",
+                        "name": "status",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/repository.Task"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResponseMap"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResponseMap"
+                        }
+                    }
+                }
+            }
+        },
+        "/tasks/create": {
+            "get": {
+                "description": "Отображает страницу создания шаблона задачи для пользователя в зависимости от его роли.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "text/html"
+                ],
+                "tags": [
+                    "pages"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.UsersTemplateData"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResponseMap"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResponseMap"
+                        }
+                    }
+                }
+            }
+        },
         "/tasks/user/{login}": {
             "get": {
                 "description": "возвращает задачи пользователя по его логину",
@@ -405,7 +405,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.TaskTemplateData"
+                            "$ref": "#/definitions/repository.TaskWithLogin"
                         }
                     },
                     "400": {
@@ -553,7 +553,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.TaskTemplateData"
+                            "$ref": "#/definitions/repository.TaskWithLogin"
                         }
                     },
                     "400": {
@@ -567,7 +567,7 @@
         },
         "/users": {
             "get": {
-                "description": "возвращает список всех пользователей, только для админов",
+                "description": "возвращает список всех пользователей, только для администраторов",
                 "produces": [
                     "application/json"
                 ],
@@ -594,7 +594,7 @@
                 }
             },
             "post": {
-                "description": "создает нового пользователя, только для админов",
+                "description": "создает нового пользователя, только для администраторов",
                 "consumes": [
                     "application/json"
                 ],
@@ -633,8 +633,8 @@
             }
         },
         "/users/{id}/block": {
-            "post": {
-                "description": "блокирует пользователя по идентификатору, только для админов",
+            "put": {
+                "description": "блокирует пользователя по идентификатору, только для администраторов",
                 "produces": [
                     "application/json"
                 ],
@@ -675,35 +675,6 @@
                 "type": "string"
             }
         },
-        "dto.TaskTemplateData": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "priority": {
-                    "type": "integer"
-                },
-                "status": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "userLogin": {
-                    "type": "string"
-                }
-            }
-        },
         "dto.UsersTemplateData": {
             "type": "object",
             "properties": {
@@ -741,6 +712,35 @@
                 },
                 "userId": {
                     "type": "integer"
+                }
+            }
+        },
+        "repository.TaskWithLogin": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "priority": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "userLogin": {
+                    "type": "string"
                 }
             }
         },
